@@ -1,3 +1,5 @@
+HEAD
+	+ Add systemQuota object class when setting user quota
 4.2.1
 	+ Remove External AD mode leftovers in menu when not configured
 4.2
